--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -10,6 +10,18 @@
         android:name="com.kprights.infosys.newsfeed.view.fragment.NewsFeedFragment"
         android:label="fragment_news_feed"
         tools:layout="@layout/fragment_news_feed" >
+        <action
+            android:id="@+id/action_showDetail"
+            app:destination="@id/detailFragment" />
+    </fragment>
 
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.kprights.infosys.newsfeed.view.fragment.NewsDetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/news_detail_fragment">
+        <argument
+            android:name="news"
+            app:argType="com.kprights.infosys.newsfeed.model.News"/>
     </fragment>
 </navigation>
