--- a/app/src/main/res/layout/news_detail_fragment.xml
+++ b/app/src/main/res/layout/news_detail_fragment.xml
@@ -23,6 +23,7 @@
             app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:showImage="@{news.strImageUrl}"
             app:srcCompat="@drawable/ic_broken_image" />
 
         <TextView
@@ -32,6 +33,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@{news.strTitle}"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewForNews" />
 
@@ -42,6 +45,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@{news.strDescription}"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewForTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
